# IO1

./: Application.py  GUI.py  README.md  data.py  dependency_tracker.py  fileParsing.py  file_parsing.py  module.py  node.py  project.py  pyproject.toml  test_main.py
GUI/: Application.py  GUI.py  __init__.py  gui.kv  root_widget.py
data/: __init__.py  cyclomaticComplexity.py  data.py  graphs.py
docs/: diagram.uxf
objects/: __init__.py  file.py  function.py  module.py  project.py
parsing/: __init__.py  file_parsing.py
test/: __init__.py  sample_code.py  test_main.py  unitests.py
