[tool.poetry]
name = "IO1"
version = "0.1.0"
description = "Managment tool for easier working with it on diffrent machines"
authors = ["BOMBELKI"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
