[tool.poetry]
name = "IO1"
version = "0.1.0"
description = "Managment tool for easier working on diffrent machines"
authors = ["BOMBELKI"]

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.4"
matplotlib = "^3.1"
kivy = "^1.11"
"kivy-deps.sdl2" = "0.1.22"
"kivy-deps.glew" = "0.1.12"
requests = "^2.22"
kivy-garden = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
